# BR-SWDIY

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
firmware/: .gitignore  README.md  build_release.ps1  platformio.ini
hardware/: README.md
protocol/: README.md  compatibility.md  (+4 more)
software/: README.md  build_nuitka.ps1  build_nuitka.py  pyproject.toml  requirements-dev.txt
software/scripts/: dev_run.py  package_windows.py
software/src/brbase_app/: main.py
software/src/brbase_app/core/: device.py  telemetry_service.py
software/src/brbase_app/profiles/: manager.py
software/src/brbase_app/protocol/: parser.py
software/src/brbase_app/transport/: port_scanner.py  serial_port.py
software/src/brbase_app/ui/: app.py  theme.py
software/src/brbase_app/ui/views/: config_view.py  diagnostics_view.py  monitor_view.py
software/src/brswdiy_app/: gui.py  main.py  port_scanner.py  serial_port.py  state.py
software/src/brswdiy_app/core/: calibration_service.py  config_service.py  controller.py  device.py  safety_service.py
software/src/brswdiy_app/proto/: controller.py  parser.py  protocol.py
software/src/brswdiy_app/protocol/: commands.py  responses.py  stream_commands.py  stream_parser.py  validators.py
software/src/brswdiy_app/transport/: serial_port.py
software/src/brswdiy_app/ui/: state.py  theme.py
software/src/brswdiy_app/ui/views/: calibration_view.py  connection_view.py
software/src/brswdiy_app/utils/: logging.py  paths.py  version.py
software/tests/: test_commands.py  test_device.py  test_parser.py
(+59 files in other folders)
