[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brswdiy-app"
version = "0.1.0"
description = "Desktop app for BRSWDIY"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "pyserial>=3.5",
    "customtkinter (>=5.2.2,<6.0.0)",
]

[project.scripts]
apus = "brswdiy_app.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.6.0",
    "nuitka[onefile]>=2.6",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
